Update profile image source and enhance README with setup instructions

--- a/index.html
+++ b/index.html
@@ -139,8 +139,9 @@
             <!-- Profile Image -->
             <div class="mb-8">
                 <img id="profileImage" 
-                     src="https://via.placeholder.com/200" 
+                     src="profile.jpg" 
                      alt="Profile Photo" 
+                     onerror="this.src='https://via.placeholder.com/200/000000/FFFFFF?text=A.T.Z'"
                      class="w-48 h-48 rounded-full mx-auto border-4 border-black profile-glow object-cover">
             </div>
             
