Refactor Hero Section in index.html for improved layout; adjust padding for better visual balance

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <section id="home" class="min-h-screen flex items-center justify-center px-4 sm:px-6 pt-20 pb-12 sm:pt-24 sm:pb-16">
+    <section id="home" class="flex items-center justify-center px-4 sm:px-6 pt-24 pb-8 sm:pt-28 sm:pb-10">
         <div class="max-w-5xl mx-auto text-center fade-in">
             <!-- Profile Image -->
             <div class="mb-4 sm:mb-6">
